--- a/compose/.env
+++ b/compose/.env
@@ -3,3 +3,5 @@
 PROJECT_PATH=/odoo_ar/odoo-13.0/optilogic
 ODOO_IMAGE=lbozzi/odoo-docker-lb:13.0
 SITE_DOMAIN=optilogic.vangrow.com.ar
+HTTP_PORT=8169
+LONGPOLLING_PORT=8172
