--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -6,31 +6,31 @@
 version: '3.5'
 
 services:
-  traefik:
-    image: traefik:2.3.7
-    container_name: traefik
-    restart: unless-stopped
-    command:
-      - --entrypoints.web.address=:80
-      - --entryPoints.websecure.address=:443
+#  traefik:
+#    image: traefik:2.3.7
+#    container_name: traefik
+#    restart: unless-stopped
+#    command:
+#      - --entrypoints.web.address=:80
+#      - --entryPoints.websecure.address=:443
 
-      #- --log.level=DEBUG # Don't do that in production
-      - --providers.docker
-      # - --api.insecure # Don't do that in production
-      # - --api.debug # Don't do that in production
+#      #- --log.level=DEBUG # Don't do that in production
+#      - --providers.docker
+#      # - --api.insecure # Don't do that in production
+#      # - --api.debug # Don't do that in production
 
-      - --certificatesresolvers.le.acme.email=lbozzi@gmail.com
-      - --certificatesresolvers.le.acme.storage=/opt/traefik/acme.json
-      - --certificatesresolvers.le.acme.httpChallenge=true
-      - --certificatesresolvers.le.acme.httpChallenge.entryPoint=web
-      #- --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # descoment for staging
-    ports:
-      - "80:80"
-      - "443:443"
-      # - "8080:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /odoo_ar/traefik/:/opt/traefik/
+#      - --certificatesresolvers.le.acme.email=lbozzi@gmail.com
+#      - --certificatesresolvers.le.acme.storage=/opt/traefik/acme.json
+#      - --certificatesresolvers.le.acme.httpChallenge=true
+#      - --certificatesresolvers.le.acme.httpChallenge.entryPoint=web
+#      #- --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # descoment for staging
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#      # - "8080:8080"
+#    volumes:
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#      - /odoo_ar/traefik/:/opt/traefik/
 
   postgres:
     image: postgres:11.1-alpine
@@ -86,7 +86,7 @@ services:
 
       # Redirecciona rou-odoo-secure al puert 8069 donde escucha odoo
       - traefik.http.routers.rou-odoo-secure.service=srv-odoo-secure
-      - traefik.http.services.srv-odoo-secure.loadbalancer.server.port=8069
+      - traefik.http.services.srv-odoo-secure.loadbalancer.server.port=${HTTP_PORT}
 
       # Router rou-chat-secure --> Acceso a odoo en puerto 443
       - traefik.http.routers.rou-chat-secure.rule=(Host(`${SITE_DOMAIN}`)) && PathPrefix(`/longpolling`)
@@ -96,4 +96,4 @@ services:
 
       # redirecciona rout-chat-secure al puerto 8072 donde odoo escucha el longpolling
       - traefik.http.routers.rou-chat-secure.service=srv-chat-secure
-      - traefik.http.services.srv-chat-secure.loadbalancer.server.port=8072
+      - traefik.http.services.srv-chat-secure.loadbalancer.server.port=${LONGPOLLING_PORT}
