--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -6,31 +6,31 @@
 version: '3.5'
 
 services:
-#  traefik:
-#    image: traefik:2.3.7
-#    container_name: traefik
-#    restart: unless-stopped
-#    command:
-#      - --entrypoints.web.address=:80
-#      - --entryPoints.websecure.address=:443
+  traefik:
+    image: traefik:2.3.7
+    container_name: traefik
+    restart: unless-stopped
+    command:
+      - --entrypoints.web.address=:80
+      - --entryPoints.websecure.address=:443
 
-#      #- --log.level=DEBUG # Don't do that in production
-#      - --providers.docker
-#      # - --api.insecure # Don't do that in production
-#      # - --api.debug # Don't do that in production
+      #- --log.level=DEBUG # Don't do that in production
+      - --providers.docker
+      # - --api.insecure # Don't do that in production
+      # - --api.debug # Don't do that in production
 
-#      - --certificatesresolvers.le.acme.email=lbozzi@gmail.com
-#      - --certificatesresolvers.le.acme.storage=/opt/traefik/acme.json
-#      - --certificatesresolvers.le.acme.httpChallenge=true
-#      - --certificatesresolvers.le.acme.httpChallenge.entryPoint=web
-#      #- --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # descoment for staging
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#      # - "8080:8080"
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-#      - /odoo_ar/traefik/:/opt/traefik/
+      - --certificatesresolvers.le.acme.email=lbozzi@gmail.com
+      - --certificatesresolvers.le.acme.storage=/opt/traefik/acme.json
+      - --certificatesresolvers.le.acme.httpChallenge=true
+      - --certificatesresolvers.le.acme.httpChallenge.entryPoint=web
+      #- --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # descoment for staging
+    ports:
+      - "80:80"
+      - "443:443"
+      # - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /odoo_ar/traefik/:/opt/traefik/
 
   postgres:
     image: postgres:12.10-alpine
