--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -34,36 +34,36 @@ services:
 
   postgres:
     image: postgres:12.10-alpine
-    container_name: pg-optilogic
+    container_name: postgres
     restart: unless-stopped
     environment:
       - POSTGRES_USER=odoo
       - POSTGRES_PASSWORD=odoo
     volumes:
-      - ${PROJECT_PATH}/postgresql:/var/lib/postgresql/data
+      - ${PROJECT_PATH_OPT}/postgresql:/var/lib/postgresql/data
 
-  odoo:
-    image: ${ODOO_IMAGE}
-    container_name: odoo
+  optilogic:
+    image: ${ODOO_IMAGE_OPT}
+    container_name: optilogic
     restart: unless-stopped
     volumes:
-      - ${PROJECT_PATH}/config:/opt/odoo/etc/
-      - ${PROJECT_PATH}/data_dir:/opt/odoo/data
-      - ${PROJECT_PATH}/log:/var/log/odoo
-      - ${PROJECT_PATH}/sources:/opt/odoo/custom-addons
-      - ${PROJECT_PATH}/backup_dir:/var/odoo/backups/
+      - ${PROJECT_PATH_OPT}/config:/opt/odoo/etc/
+      - ${PROJECT_PATH_OPT}/data_dir:/opt/odoo/data
+      - ${PROJECT_PATH_OPT}/log:/var/log/odoo
+      - ${PROJECT_PATH_OPT}/sources:/opt/odoo/custom-addons
+      - ${PROJECT_PATH_OPT}/backup_dir:/var/odoo/backups/
     links:
       - postgres:db
     environment:
       - SERVER_MODE=
     labels:
       # router rou-odoo --> Acceso a odoo en puerto 80
-      - traefik.http.routers.rou-odoo.rule=Host(`${SITE_DOMAIN}`)
+      - traefik.http.routers.rou-odoo.rule=Host(`${SITE_DOMAIN_OPT}`)
       - traefik.http.routers.rou-odoo.entrypoints=web
       - traefik.http.routers.rou-odoo.service=srv-odoo-secure
 
       # router rou-chat --> Acceso a /longpolling en puerto 80
-      - traefik.http.routers.rou-chat.rule=Host(`${SITE_DOMAIN}`) && PathPrefix(`/longpolling`)
+      - traefik.http.routers.rou-chat.rule=Host(`${SITE_DOMAIN_OPT}`) && PathPrefix(`/longpolling`)
       - traefik.http.routers.rou-chat.entrypoints=web
       - traefik.http.routers.rou-chat.service=srv-chat-secure
 
@@ -79,21 +79,77 @@ services:
       - traefik.http.routers.rou-chat.middlewares=redirect-to-https@docker
 
       # router rou-odoo-secure --> Acceso a odoo en puerto 443
-      - traefik.http.routers.rou-odoo-secure.rule=Host(`${SITE_DOMAIN}`)
+      - traefik.http.routers.rou-odoo-secure.rule=Host(`${SITE_DOMAIN_OPT}`)
       - traefik.http.routers.rou-odoo-secure.tls=true
       - traefik.http.routers.rou-odoo-secure.tls.certresolver=le
       - traefik.http.routers.rou-odoo-secure.entrypoints=websecure
 
       # Redirecciona rou-odoo-secure al puert 8069 donde escucha odoo
       - traefik.http.routers.rou-odoo-secure.service=srv-odoo-secure
-      - traefik.http.services.srv-odoo-secure.loadbalancer.server.port=${HTTP_PORT}
+      - traefik.http.services.srv-odoo-secure.loadbalancer.server.port=${HTTP_PORT_OPT}
 
       # Router rou-chat-secure --> Acceso a odoo en puerto 443
-      - traefik.http.routers.rou-chat-secure.rule=(Host(`${SITE_DOMAIN}`)) && PathPrefix(`/longpolling`)
+      - traefik.http.routers.rou-chat-secure.rule=(Host(`${SITE_DOMAIN_OPT}`)) && PathPrefix(`/longpolling`)
       - traefik.http.routers.rou-chat-secure.tls=true
       - traefik.http.routers.rou-chat-secure.tls.certresolver=le
       - traefik.http.routers.rou-chat-secure.entrypoints=websecure
 
       # redirecciona rout-chat-secure al puerto 8072 donde odoo escucha el longpolling
       - traefik.http.routers.rou-chat-secure.service=srv-chat-secure
-      - traefik.http.services.srv-chat-secure.loadbalancer.server.port=${LONGPOLLING_PORT}
+      - traefik.http.services.srv-chat-secure.loadbalancer.server.port=${LONGPOLLING_PORT_OPT}
+
+    backbone:
+      image: ${ODOO_IMAGE_BBN}
+      container_name: backbone
+      restart: unless-stopped
+      volumes:
+        - ${PROJECT_PATH_BBN}/config:/opt/odoo/etc/
+        - ${PROJECT_PATH_BBN}/data_dir:/opt/odoo/data
+        - ${PROJECT_PATH_BBN}/log:/var/log/odoo
+        - ${PROJECT_PATH_BBN}/sources:/opt/odoo/custom-addons
+        - ${PROJECT_PATH_BBN}/backup_dir:/var/odoo/backups/
+      links:
+        - postgres:db
+      environment:
+        - SERVER_MODE=
+      labels:
+        # router rou-odoo --> Acceso a odoo en puerto 80
+        - traefik.http.routers.rou-odoo.rule=Host(`${SITE_DOMAIN_BBN}`)
+        - traefik.http.routers.rou-odoo.entrypoints=web
+        - traefik.http.routers.rou-odoo.service=srv-odoo-secure
+
+        # router rou-chat --> Acceso a /longpolling en puerto 80
+        - traefik.http.routers.rou-chat.rule=Host(`${SITE_DOMAIN_BBN}`) && PathPrefix(`/longpolling`)
+        - traefik.http.routers.rou-chat.entrypoints=web
+        - traefik.http.routers.rou-chat.service=srv-chat-secure
+
+        # Middleware para comprimir paginas.
+        - traefik.http.middlewares.compress.compress=true
+
+        # Middleware para redireccionar redireccion http -> https
+        - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+        - traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true
+
+        # Asigno los middlewares de redireccion a los routers
+        - traefik.http.routers.rou-odoo.middlewares=redirect-to-https@docker
+        - traefik.http.routers.rou-chat.middlewares=redirect-to-https@docker
+
+        # router rou-odoo-secure --> Acceso a odoo en puerto 443
+        - traefik.http.routers.rou-odoo-secure.rule=Host(`${SITE_DOMAIN_BBN}`)
+        - traefik.http.routers.rou-odoo-secure.tls=true
+        - traefik.http.routers.rou-odoo-secure.tls.certresolver=le
+        - traefik.http.routers.rou-odoo-secure.entrypoints=websecure
+
+        # Redirecciona rou-odoo-secure al puert 8069 donde escucha odoo
+        - traefik.http.routers.rou-odoo-secure.service=srv-odoo-secure
+        - traefik.http.services.srv-odoo-secure.loadbalancer.server.port=${HTTP_PORT_BBN}
+
+        # Router rou-chat-secure --> Acceso a odoo en puerto 443
+        - traefik.http.routers.rou-chat-secure.rule=(Host(`${SITE_DOMAIN_BBN}`)) && PathPrefix(`/longpolling`)
+        - traefik.http.routers.rou-chat-secure.tls=true
+        - traefik.http.routers.rou-chat-secure.tls.certresolver=le
+        - traefik.http.routers.rou-chat-secure.entrypoints=websecure
+
+        # redirecciona rout-chat-secure al puerto 8072 donde odoo escucha el longpolling
+        - traefik.http.routers.rou-chat-secure.service=srv-chat-secure
+        - traefik.http.services.srv-chat-secure.loadbalancer.server.port=${LONGPOLLING_PORT_BBN}
