--- a/compose/.env
+++ b/compose/.env
@@ -1,7 +1,13 @@
-# Environment file for Optilogic
+# Environment file for Optilogic / Backbone
 
-PROJECT_PATH=/odoo_ar/odoo-13.0/optilogic
-ODOO_IMAGE=lbozzi/odoo-docker-lb:13.0
-SITE_DOMAIN=optilogic.vangrow.com.ar
-HTTP_PORT=8069
-LONGPOLLING_PORT=8072
+PROJECT_PATH_OPT=/odoo_ar/odoo-13.0/optilogic
+ODOO_IMAGE_OPT=lbozzi/odoo-docker-lb:13.0
+SITE_DOMAIN_OPT=localhost
+HTTP_PORT_OPT=8069
+LONGPOLLING_PORT_OPT=8072
+
+PROJECT_PATH_BBN=/odoo_ar/odoo-13.0/backbone
+ODOO_IMAGE_BBN=lbozzi/odoo-docker-lb:13.0
+SITE_DOMAIN_BBN=localhost2
+HTTP_PORT_BBN=8169
+LONGPOLLING_PORT_BBN=8172
